# nist_rng

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README-cmake  README.md  build-android.sh  build-ios.sh  nist_rng.sln
cmake/: PlatformSettings.cmake
include/: CMakeLists.txt  nist_aes_padlock.h  nist_aes_rijndael.h  nist_config.h  nist_ctr_drbg_aes128.h
kat/: CMakeLists.txt  Makefile  Makefile.inc
kat/ecb_e_m/: CMakeLists.txt  Makefile  ecb_e_m.c  ecb_e_m.vcproj
kat/ecb_vk/: CMakeLists.txt  Makefile  ecb_vk.c  ecb_vk.vcproj
kat/ecb_vt/: CMakeLists.txt  Makefile  ecb_vt.c  ecb_vt.vcproj
lib/: CMakeLists.txt  Makefile  diffusion.c  dump.c  nist_aes_padlock.c  nist_ctr_drbg.c  nist_rng.vcproj  nist_rng.vcxproj  nist_rng.vcxproj.filters  rijndael.c  runtime.c
programs/: CMakeLists.txt  Makefile
programs/c7random/: Makefile  c7random.c  c7random.h  c7random.vcproj  nist_rbg.c
programs/nist_ctr_drbg/: CMakeLists.txt  Makefile  main.c  nist_ctr_drbg.vcproj  nist_ctr_drbg.vcxproj
